enumのコンバート対応 hash値の埋め込み

--- a/Source/SaveDataPipelineUbtPlugin/SaveDataPipelineUbtPlugin.ubtplugin.csproj
+++ b/Source/SaveDataPipelineUbtPlugin/SaveDataPipelineUbtPlugin.ubtplugin.csproj
@@ -41,6 +41,9 @@
     <Reference Include="EpicGames.Core">
       <HintPath>$(EngineDir)\Binaries\DotNET\UnrealBuildTool\EpicGames.Core.dll</HintPath>
     </Reference>
+    <Reference Include="EpicGames.IoHash">
+      <HintPath>$(EngineDir)\Binaries\DotNET\UnrealBuildTool\EpicGames.IoHash.dll</HintPath>
+    </Reference>
     <Reference Include="EpicGames.UHT">
       <HintPath>$(EngineDir)\Binaries\DotNET\UnrealBuildTool\EpicGames.UHT.dll</HintPath>
     </Reference>
