--- a/SaveDataPipeline.uplugin
+++ b/SaveDataPipeline.uplugin
@@ -1,12 +1,12 @@
 {
     "FileVersion": 3,
     "Version": 1,
-    "VersionName": "1.0",
+    "VersionName": "0.1",
     "FriendlyName": "SaveDataPipeline",
     "Description": "",
     "Category": "Other",
-    "CreatedBy": "",
-    "CreatedByURL": "",
+    "CreatedBy": "https://github.com/laycnc",
+    "CreatedByURL": "https://github.com/laycnc/UnrealSaveDataPipeline",
     "DocsURL": "",
     "MarketplaceURL": "",
     "SupportURL": "",
